# dmserv

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  pyproject.toml
src/dmserv/: __init__.py
src/dmserv/cmd/: admin.py  bot.py  main.py
src/dmserv/cogs/: FronterList.py  main.py
src/dmserv/db/: conn.py  models.py
